--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Gently reminds you to take mindful breaks while coding.",
   "version": "0.0.1",
   "publisher": "SpiritOasis",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kyle-koi/focus-pond/"
+  },
   "engines": {
     "vscode": "^1.50.0"
   },
